--- a/src/ListenTogether.Pages/Pages/DiscoverPage.razor
+++ b/src/ListenTogether.Pages/Pages/DiscoverPage.razor
@@ -5,7 +5,7 @@
 @inject NavigationManager NavigationManager
 @inject ISearchHistoryStorage SearchHistoryStorage
 @inject IKeyValueStorage KeyValueStorage
-@inject MusicNetPlatform _musicNetworkService
+@inject MusicNetPlatform _musicNetPlatform
 <MudHidden Breakpoint="Breakpoint.SmAndUp">
     <SearchLabel />
 </MudHidden>
