--- a/src/ListenTogether.Pages/Pages/MyFavoriteDetailPage.razor
+++ b/src/ListenTogether.Pages/Pages/MyFavoriteDetailPage.razor
@@ -2,7 +2,7 @@
 @using ListenTogether.Filters.MusicSearchFilter;
 
 @inject MusicResultService MusicResultService
-@inject MusicNetPlatform MusicNetworkService
+@inject MusicNetPlatform _musicNetPlatform
 @inject IDialogService DialogService
 @inject IMyFavoriteService MyFavoriteService
 @inject NavigationManager NavigationManager
