Windows支持设置关闭时最小化

--- a/src/ListenTogether.Pages/Components/DesktopTitleBar.razor
+++ b/src/ListenTogether.Pages/Components/DesktopTitleBar.razor
@@ -47,7 +47,14 @@
     }
     private Task CloseAsync()
     {
-        WindowTitleBar.Close();
+        if (Settings.Environment.General.IsHideWindowWhenClosed)
+        {
+            WindowTitleBar.Minimize();
+        }
+        else
+        {
+            WindowTitleBar.Close();
+        }
         return Task.CompletedTask;
     }
 
