修改播放页无法打开的问题

--- a/src/ListenTogether.Pages/Pages/PlayingPage.razor
+++ b/src/ListenTogether.Pages/Pages/PlayingPage.razor
@@ -31,8 +31,7 @@
             </div>
 
             <MudHidden Breakpoint="Breakpoint.SmAndDown">
-                <DesktopTitleBar Class="flex-grow-0 ml-5"
-                                 ButtonStyle="color:var(--mud-palette-white);" />
+                <DesktopTitleBar Class="flex-grow-0 ml-5"/>
             </MudHidden>
         </div>
 
