双击标题栏最大化

--- a/src/ListenTogether.Pages/Components/DesktopTitleBar.razor
+++ b/src/ListenTogether.Pages/Components/DesktopTitleBar.razor
@@ -40,7 +40,7 @@
         return Task.CompletedTask;
     }
 
-    private async Task MaximizeAsync()
+    public async Task MaximizeAsync()
     {
         WindowTitleBar.Maximize();
         await SetMaximizerIconAsync();
@@ -58,7 +58,7 @@
         return Task.CompletedTask;
     }
 
-    private Task SetMaximizerIconAsync()
+    private async Task SetMaximizerIconAsync()
     {
         if (WindowTitleBar.IsMaximized)
         {
@@ -68,7 +68,7 @@
         {
             _maximizerIcon = Icons.Material.Filled.Fullscreen;
         }
-        return Task.CompletedTask;
+        await InvokeAsync(StateHasChanged);
     }
 
     private Task SetTitleAsync(string title)
